force-app/main/default/objects/Customer_Review__c/Customer_Review__c.object-meta.xml
<CustomObject>
    <description
    >This object holds customer reviews which are associated with the Product__c object.</description>
    <label>Customer Review</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Customer Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>