force-app/main/default/objects/Customer_Review__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description
    >This field represents the master in a master-detail relationship, and is the associated product for the customer review.</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Customer Reviews</relationshipLabel>
    <relationshipName>Customer_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>