force-app/main/default/objects/Customer_Review__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <description
    >This fields contains the review text that a customer submitted for the specific product.</description>
    <label>Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>